--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,14 +4,14 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="22" />
+    <uses-sdk android:minSdkVersion="13" android:targetSdkVersion="22" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
-        <activity android:name=".MainMenuActivity" android:label="Start gdxGP">
+        <activity android:name="ru.dk.gdxGP.android.MainMenuActivity" android:label="Start gdxGP">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -27,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LevelListActivity" android:label="Choose a level"/>
     </application>
 
 </manifest>
