--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -11,23 +11,14 @@
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
             android:theme="@style/GdxTheme">
-        <activity android:name="ru.dk.gdxGP.android.MainMenuActivity" android:label="Start gdxGP">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-        <activity
-                android:name="ru.dk.gdxGP.android.AndroidLauncher"
-                android:label="@string/app_name"
-                android:screenOrientation="landscape"
-                android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+        <activity android:name="ru.dk.gdxGP.android.MainMenuActivity" android:label="@string/appName">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".LevelListActivity" android:label="Choose a level"/>
+        <activity android:name=".AndroidLauncher" android:label="Play Game"/>
     </application>
 
 </manifest>
