15_04_19_20_03 //fixed android rotation //slowed down animation speed

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -18,7 +18,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".LevelListActivity" android:label="Choose a level"/>
-        <activity android:name=".AndroidLauncher" android:label="Play Game"/>
+        <activity android:name=".AndroidLauncher" android:label="Play Game"
+                android:screenOrientation="landscape"
+                android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+                />
     </application>
 
 </manifest>
