--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,26 @@
-*.class
+.gradle
+.idea
+build/
 
+*.class
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
+*.jar
 *.war
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#IDEA files
+*.ipr
+*.iml
+*.iws
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle/wrapper/gradle-wrapper.jar
