--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,27 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ru.dk.gdxGP.android"
-          android:versionCode="1"
-          android:versionName="1.0">
+    package="ru.dk.gdxGP.android"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="13" android:targetSdkVersion="22"/>
+    <uses-sdk
+        android:minSdkVersion="13"
+        android:targetSdkVersion="22" />
+
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="23" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name"
-            android:theme="@style/GdxTheme">
-        <activity android:name="ru.dk.gdxGP.android.MainMenuActivity" android:label="@string/appName">
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/GdxTheme" >
+        <activity
+            android:name=".MainMenuActivity"
+            android:label="@string/appName" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LevelListActivity" android:label="Choose a level"/>
-        <activity android:name=".AndroidLauncher" android:label="Play Game"
-                  android:screenOrientation="landscape"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
-                />
+        <activity
+            android:name=".LevelListActivity"
+            android:label="Choose a level" />
+        <activity
+            android:name=".AndroidLauncher"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:label="Play Game"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainMenuActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ru.dk.gdxGP.android.MainMenuActivity" />
+        </activity>
     </application>
 
 </manifest>
