15_06_19_17_39 //added logo to main menu //fixed design for different versions of Android //minAPI set to 10 //some fixes

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle/wrapper/gradle-wrapper.jar
+#default local.properties is in repository
+local.properties
