15_06_23_16_40 //note_gp.xml update //some fixes

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -8,11 +8,11 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="22" />
 
-    <android:uses-permission
+    <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
-    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <android:uses-permission
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="23" />
 
@@ -28,11 +28,12 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.OPENABLE" />
             </intent-filter>
         </activity>
         <activity
             android:name=".LevelListActivity"
-            android:label="Choose a level" />
+            android:label="@string/choose_the_level" />
         <activity
             android:name=".AndroidLauncher"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
