--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ project(":core") {
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
-        compile "com.google.code.gson:gson:2.+"
+        compile "com.google.code.gson:gson:2.3.1"
     }
 }
 
