15_06_24_18_54 //note_gp.xml update //some fixes //now app is working //black texture fixed //load and save settings

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -47,6 +47,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ru.dk.gdxGP.android.MainMenuActivity" />
         </activity>
+        <activity
+            android:name=".LogoActivity"
+            android:label="@string/title_activity_logo" >
+        </activity>
     </application>
 
 </manifest>
