15_06_26_18_42 //new buttons //settings finished //some fixes //now levels and tutorials are separated //some fixes

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -23,7 +23,9 @@
         android:theme="@style/GdxTheme" >
         <activity
             android:name=".MainMenuActivity"
-            android:label="@string/appName" >
+            android:label="@string/appName"
+            android:screenOrientation="portrait"
+                >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,8 +34,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LevelListActivity"
-            android:label="@string/choose_the_level" />
+                android:name=".LevelListActivity"
+                android:label="@string/choose_the_level" />
+        <activity
+                android:name=".TutorialListActivity"
+                android:label="@string/choose_the_level" />
         <activity
             android:name=".AndroidLauncher"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
@@ -49,7 +54,8 @@
         </activity>
         <activity
             android:name=".LogoActivity"
-            android:label="@string/title_activity_logo" >
+            android:label="@string/title_activity_logo"
+                android:screenOrientation="portrait">
         </activity>
     </application>
 
